--- a/gb/23/8/20/n14057476.md
+++ b/gb/23/8/20/n14057476.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>共机舰威吓国军反制 AIT促停止对台施压</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/08/id14057477-630739-600x400.jpg" />
 <h6>应对中共军演，国防部20日释出海军田单舰监控共军徐州舰的画面。（海军司令部提供）
 </h6>
 <hr>
-<p>【大纪元2023年08月20日讯】（大纪元记者吴旻洲台湾台北报导）<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%B5%96%E6%B8%85%E5%BE%B7.md#1">赖清德</a>刚结束美洲行返国后，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>随即宣布在台湾周边组织海空联合战备警巡，称是对“台独”与外部势力勾连的严重警告。<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%9B%BD%E9%98%B2%E9%83%A8.md#1">国防部</a>20日痛批共军是“坐实军事扩张霸道本质”；美国在台协会（AIT）则说，美国敦促北京停止对台施压，并转向与台湾对话。</p>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%B5%96%E6%B8%85%E5%BE%B7.md#1">赖清德</a>出访巴拉圭，途中过境美国纽约、旧金山，并于18日清晨抵台。<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>官媒随即发布，称对赖清德“过境窜美”表明严正立场，共军东部战区也在19日宣布在台湾周边组织海空联合战备警巡和联合演训，重点演练舰机协同、夺取制权，检验战区部队联合作战实战能力。</p>
-<p>根据<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%9B%BD%E9%98%B2%E9%83%A8.md#1">国防部</a>统计，自19日上午6时至20日上午6时，侦获共机45架次、共舰9艘次，持续在台海周边活动。其中，“歼11”等27架次共机逾越海峡中线，及其延伸线进入西南空域。</p>
-<p>因应中共对台<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%86%9B%E6%BC%94.md#1">军演</a>，国军持续加强戒备，派遣海军、空军兵力应对，海军也派出田单舰监控中共徐州舰；地面部队保持常态、加强区域联防，强化防空及突发状况应处。</p>
-<p>对于中共<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%86%9B%E6%BC%94.md#1">军演</a>动态，国防部强调，国军运用任务机、舰及岸置飞弹系统严密监控与应处，并严正谴责中共此次借故发动军事演习，不仅无助台海和平稳定，更突显其穷兵黩武心态，坐实军事扩张霸道本质。</p>
+<p>【大纪元2023年08月20日讯】（大纪元记者吴旻洲台湾台北报导）赖清德刚结束美洲行返国后，中共随即宣布在台湾周边组织海空联合战备警巡，称是对“台独”与外部势力勾连的严重警告。国防部20日痛批共军是“坐实军事扩张霸道本质”；美国在台协会（AIT）则说，美国敦促北京停止对台施压，并转向与台湾对话。</p>
+<p>赖清德出访巴拉圭，途中过境美国纽约、旧金山，并于18日清晨抵台。中共官媒随即发布，称对赖清德“过境窜美”表明严正立场，共军东部战区也在19日宣布在台湾周边组织海空联合战备警巡和联合演训，重点演练舰机协同、夺取制权，检验战区部队联合作战实战能力。</p>
+<p>根据国防部统计，自19日上午6时至20日上午6时，侦获共机45架次、共舰9艘次，持续在台海周边活动。其中，“歼11”等27架次共机逾越海峡中线，及其延伸线进入西南空域。</p>
+<p>因应中共对台军演，国军持续加强戒备，派遣海军、空军兵力应对，海军也派出田单舰监控中共徐州舰；地面部队保持常态、加强区域联防，强化防空及突发状况应处。</p>
+<p>对于中共军演动态，国防部强调，国军运用任务机、舰及岸置飞弹系统严密监控与应处，并严正谴责中共此次借故发动军事演习，不仅无助台海和平稳定，更突显其穷兵黩武心态，坐实军事扩张霸道本质。</p>
 <p>军方表示，面对共军挑衅，国军官兵24小时坚守岗位，严密监控敌情，依照“守中线、守领海、守主权”原则，坚定不退缩。空军战机加强战备巡弋，海军船舰持续侦巡、监控共舰。</p>
 <p>共军除了派海、空兵力扰台，也运用“文攻”手段意图乱国军与民心。中共东部战区微博20日发布最新影片，除了将台湾参与成都世大运代表团画面放入，还将讨海人心中的守护神“妈祖”意象纳入。</p>
 <p>影片内容还提到，妈祖为“在阴谋家、野心家制造的人祸面前”，是携手同心的力量及美好生活守护神。共军还自称，“在民族尊严、祖国统一受到挑战面前，人民子弟兵是为万世开太平的守护神”。共军东部战区的影片最后，还放入两栖部队演练画面，称“海峡的那一边，我想去看看”。</p>
@@ -20,41 +20,40 @@
 <p>AIT发言人重申，美国将继续支持以符合台湾人民愿望与最佳利益的做法，和平解决两岸问题。美国仍然致力遵循以“台湾关系法”、中美三联合公报和六项保证为指导的一中政策。美国并将继续密切监控演习情况。</p>
 <p>责任编辑：吕美琪</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/12/13/n12617555.md#1">英媒：中共试图以“灰色地带”战术制服台湾</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/24/n12708541.md#1">美要求陆停止对台施压 国民党表示欢迎</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/28/n12717760.md#1">专家：中共军机频扰台 美国应有战略准备</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/2/4/n12733060.md#1">是否支持一中？ 国务院：政策不变</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/3/27/n12839168.md#1">20架共机扰台创新高 专家：自证中共威胁论</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/10/4/n13280503.md#1">无视国际谴责 共机四天逾110架次扰台</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/10/5/n13282954.md#1">中共军机扰台影响安全 国军投2400亿提升战力</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/10/5/n13283278.md#1">共机5天150架次扰台 国军无惧当战备助力</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/10/6/n13285891.md#1">前白宫国安顾问：2022年台海局势最危险</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/10/19/n13315145.md#1">陈柏惟罢免案 陈奕齐：中共是背后大黑手</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/12/13/n12617555.md#1">英媒：中共试图以“灰色地带”战术制服台湾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/24/n12708541.md#1">美要求陆停止对台施压 国民党表示欢迎</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/28/n12717760.md#1">专家：中共军机频扰台 美国应有战略准备</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/2/4/n12733060.md#1">是否支持一中？ 国务院：政策不变</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/3/27/n12839168.md#1">20架共机扰台创新高 专家：自证中共威胁论</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/10/4/n13280503.md#1">无视国际谴责 共机四天逾110架次扰台</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/10/5/n13282954.md#1">中共军机扰台影响安全 国军投2400亿提升战力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/10/5/n13283278.md#1">共机5天150架次扰台 国军无惧当战备助力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/10/6/n13285891.md#1">前白宫国安顾问：2022年台海局势最危险</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/10/19/n13315145.md#1">陈柏惟罢免案 陈奕齐：中共是背后大黑手</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/28/n10672001.md#1" target="_blank">袁斌：计划生育，酿成了多少灭绝人性的惨剧</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/2/24/n4647598.md#1" target="_blank">在法轮大法修炼中重生的宁德人（一）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/11/n9829932.md#1" target="_blank">杨宁：邓小平妻兄服毒自尽 两连襟被迫害死</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/31/n11489359.md#1" target="_blank">法轮功洪传欧洲 多族裔民众：找到生命意义</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/25/n14081006.md#1">【人物真相】马斯克的“虎妈”和“犬子”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/23/n14079824.md#1">中秋节：最接近仙界时空的节日</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/23/n14079576.md#1">中秋节祭月吃中秋月饼源于何时？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083923.md#1">【未解之谜】墨西哥外星人事件大揭秘</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064455.md#1">【古道人生】十几岁镖师女押运数十万银到四川</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/30/n14085557.md#1">【菁英论坛】文革一代掌权 习深陷两面人困境</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/2/n14086659.md#1">【新闻大家谈】保镳不离身 泄习近平心头患？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/30/n14085445.md#1">【环球直击】首届新唐人全球华人选美大赛结果出炉</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/26/n14081646.md#1">两千年木乃伊在世界最古老的盐矿中保存完好</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/30/n14085314.md#1">岳山：习近平“十一”招待会严防暗杀？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/30/n14085253.md#1">分析：中共高层动荡 习近平恐祸起萧墙</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/1/n14085684.md#1">睽违9年开唱 林俊逸献唱经典向费玉清李玟致敬</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14084704.md#1">林志颖出车祸后暴瘦 录陆综三次高烧送医</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14084662.md#1">林志玲中秋节晒美照 配文祝粉丝“越来越好”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/1/n14086100.md#1">爱国片不灵了？陈凯歌《志愿军》票房惨淡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/1/n14086077.md#1">曾饰演《封神榜》纣王一角 达奇在澳洲病逝</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/25/n14080936.md#1">老了一定就手抖？小心2化学物害你得帕金森症</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/21/n14078128.md#1">养好肠道菌防百病！益生菌专家教你1招补好菌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14079990.md#1">医师荐4茶饮 消脂减赘肉 4种体型这样瘦！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14080254.md#1">胃药久服增痴呆风险？吃胃药免伤身 专家有3建议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/21/n14078572.md#1">2食材5步骤煮出日式高汤 鲜美滋味有诀窍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307724.md#1">【未解之谜】神农架野人之谜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308353.md#1">【马克时空】乌军以牙还牙 越境攻击俄库尔斯克</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308427.md#1">【漂流传奇】私房菜厨师：英国市集创业大公开</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306785.md#1">Costco再次打击非会员 这次是在入口处</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306829.md#1">陈梦战胜孙颖莎 球迷喝倒彩 背后黑幕重重</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306732.md#1">章子怡带儿女出游 炎炎夏日陪玩全身包裹严实</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307988.md#1">子瑜感谢志效领导TWICE 难忘成员来家里玩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307570.md#1">黄晓明贺表妹陈梦奥运夺冠 却遭友人诡异吐槽</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306209.md#1">营养师推荐一传统小吃 钙含量高豆浆25倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302749.md#1">肾功能不及格的10大征兆 多注意可预防洗肾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308042.md#1">什么是“慢购物” 为何它能抢救你的荷包？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307219.md#1">如何去除衣服上的防晒乳污渍？ 这一物有奇效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306483.md#1">为何天气炎热时比较不会感觉饿？</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/8/20/n14057476.htm">共机舰威吓国军反制 AIT促停止对台施压</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/8/20/n14057476.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/8/20/n14057476.htm">共机舰威吓国军反制 AIT促停止对台施压</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/8/20/n14057476.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
